# c-programme

./: C++程序设计课程设计-学生成绩管理系统-赵昱凯（302023315167）.docx  C++程序设计课程设计-学生成绩管理系统.docx  CMakeLists.txt  README.md  main.cpp
cpp/: Manager.cpp  Manlist.cpp  Menu.cpp  Student.cpp  Stulist.cpp
hpp/: Manager.hpp  Manlist.hpp  Menu.hpp  Student.hpp  Stulist.hpp
txt/: Manager.txt  Student.txt
